<resources>
    <string name="app_name">SignUp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_details">Enter Your details</string>
    <string name="welcome">Welcome</string>
    <string name="list_users">List Users</string>
    <string name="hello">Hello</string>
    <string name="view_users">View Users</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
</resources>
